[package]
name = "sqlite3_rsync"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use "bundled" to compile SQLite from source; remove the feature flag
# to link against the system libsqlite3 instead.
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
log = "0.4"
minimal_logger = "0.5"

[dev-dependencies]
tempfile = "3"
